--- a/doc/docker-compose/dev.yml
+++ b/doc/docker-compose/dev.yml
@@ -1,15 +1,13 @@
 version: '2'
-# Dev config, mounts from host directory.
+# Dev config, mounts from host directory, depends on prod.yml
 
 services:
   app:
     build: {}
-    # If you'd like xdebug and other debug tools, and don't mind the slow down, swap to the following image:
-    #image: ezsystems/php:${PHP_VERSION}-v0-dev
-    image: ezsystems/php:${PHP_VERSION}-v0
+    image: ${PHP_IMAGE}
     volumes:
-     - $COMPOSE_DIR/../../:/var/www
-     - $COMPOSER_HOME:/home/ez/.composer
+     - ${COMPOSE_DIR}/../../:/var/www
+     - ${COMPOSER_HOME}:/home/ez/.composer
     depends_on:
      - db
     environment:
