--- a/doc/docker-compose/install.yml
+++ b/doc/docker-compose/install.yml
@@ -3,10 +3,10 @@ version: '2'
 
 services:
   install:
-    image: ezsystems/php:${PHP_VERSION}-v0
+    image: ${PHP_IMAGE}
     volumes:
      - ${COMPOSE_DIR}/../..:/var/www
-     - $COMPOSER_HOME:/home/ez/.composer
+     - ${COMPOSER_HOME}:/home/ez/.composer
     environment:
      - SYMFONY_ENV
      - SYMFONY_DEBUG
