--- a/doc/docker-compose/prod.yml
+++ b/doc/docker-compose/prod.yml
@@ -3,7 +3,7 @@ version: '2'
 
 services:
   web:
-    image: nginx:stable
+    image: ${NGINX_IMAGE}
     volumes_from:
      - app
     ports:
@@ -19,9 +19,9 @@ services:
     command: /bin/bash -c "cd /var/www && cp -a doc/nginx/ez_params.d /etc/nginx && bin/vhost.sh --template-file=doc/nginx/vhost.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
   db:
-    image: mariadb:10.0
+    image: ${MYSQL_IMAGE}
     volumes:
-     - $COMPOSE_DIR/database_character_set.sh:/docker-entrypoint-initdb.d/database_character_set.sh
+     - ${COMPOSE_DIR}/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     environment:
      - MYSQL_ROOT_PASSWORD=mysecretrootpassword
      - MYSQL_USER=$DATABASE_USER
